--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -17,7 +17,7 @@
 		<h1>Cale's Slap Bet Counter</h1>
 		<div id="slapbetcounter"></div>
 		<h2>Slap Bet Commences at: <span>July 27th, 2013 @ 8:00PM</span></h2>
-		<img src="img/mikeslap.png" alt="">
+		<img src="img/mikeSlap.png" alt="">
 	</div>
 </body>
 </html>
